@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2p11
+  {
+    Modules = LHCbDIRAC:v9r2p11, LHCbWebDIRAC:v4r4p11
+    Depends = DIRAC:v6r20p22
+    LcgVer = v14r2
+  }
+
   v9r2p10
   {
     Modules = LHCbDIRAC:v9r2p10, LHCbWebDIRAC:v4r4p10
